--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -780,23 +780,12 @@
 <div class="calendly-popup-widget" data-auto-load="false"></div>
 
 <div class="chat-outer" (click)="talkToAnExpert()">
-  <!-- <i
-    class="fa fa-solid fa-comments fa-4x"
-    style="
-      background: linear-gradient(
-        90.8deg,
-        rgba(224, 73, 155, 1) 3.34%,
-        rgba(89, 101, 243, 1) 100%
-      );
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    "
-  ></i> -->
-  <img class="img-fluid pc-img" src="assets/images/Icons/chat_2.svg" alt="">
+  <img class="img-fluid pc-img" src="assets/images/Icons/chat_2.svg" alt="" />
   <div class="row mob-img">
     <div class="col-10 chat-text text-start">Talk to us</div>
-    <div class="col-2"><img class="img-fluid" src="assets/images/Icons/mobile-chat.svg" alt=""></div>
+    <div class="col-2">
+      <img class="img-fluid" src="assets/images/Icons/mobile-chat.svg" alt="" />
+    </div>
   </div>
 </div>
 
