added new button style

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -780,12 +780,13 @@
 <div class="calendly-popup-widget" data-auto-load="false"></div>
 
 <div class="chat-outer" (click)="talkToAnExpert()">
-  <img class="img-fluid pc-img" src="assets/images/Icons/chat_2.svg" alt="" />
+  <!-- <img class="img-fluid pc-img" src="assets/images/Icons/chat_2.svg" alt="" /> -->
+  <h4 class="pc-text">Book A Demo</h4>
   <div class="row mob-img">
-    <div class="col-10 chat-text text-start">Talk to us</div>
-    <div class="col-2">
+    <div class="col-12 chat-text text-center">Book A Demo</div>
+    <!-- <div class="col-2">
       <img class="img-fluid" src="assets/images/Icons/mobile-chat.svg" alt="" />
-    </div>
+    </div> -->
   </div>
 </div>
 
