--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -9,6 +9,7 @@
     <a class="navbar-brand me-2" routerLink="/"
       ><img src="assets/images/shyft_logo_2.svg" style="width: 80px" alt="Shyft"
     /></a>
+    
 
     <button
       class="navbar-toggler"
@@ -21,13 +22,14 @@
     >
       <i class="fas fa-bars"></i>
     </button>
-
+    
     <div class="collapse navbar-collapse" id="navbarButtonsExample">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+      <ul class="navbar-nav mb-2 mb-lg-0"></ul>
 
       <div class="d-flex align-items-center custom-nav-links">
         <a type="button" class="btn btn-link px-3 me-2" href="https://api.shyft.to/sol/api/explore" target="_blank"> APIs </a>
         <!-- <a type="button" href="#the_pricing" class="btn btn-link px-3 me-2"> Pricing </a> -->
+        <a type="button" class="btn btn-link px-3 me-2" href="https://documenter.getpostman.com/view/18419720/UzQvt5Kf" target="_blank"> Postman Collection </a>
         <a type="button" class="btn btn-link px-3 me-2" href="https://docs.shyft.to" target="_blank"> Docs </a>
         <button
           id="side-panel"
