Changed link for import postman

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -29,7 +29,8 @@
       <div class="d-flex align-items-center custom-nav-links">
         <a type="button" class="btn btn-link px-3 me-2" href="https://api.shyft.to/sol/api/explore" target="_blank"> APIs </a>
         <!-- <a type="button" href="#the_pricing" class="btn btn-link px-3 me-2"> Pricing </a> -->
-        <a type="button" class="btn btn-link px-3 me-2" href="https://documenter.getpostman.com/view/18419720/UzQvt5Kf" target="_blank"> Import Postman </a>
+        <!-- <a type="button" class="btn btn-link px-3 me-2" href="https://documenter.getpostman.com/view/18419720/UzQvt5Kf" target="_blank"> Import Postman </a> -->
+        <a type="button" class="btn btn-link px-3 me-2" href="https://www.getpostman.com/collections/eb766924a309c10d6d7e" target="_blank"> Import Postman </a>
         <a type="button" class="btn btn-link px-3 me-2" href="https://docs.shyft.to" target="_blank"> Docs </a>
         <button
           id="side-panel"
