Added book a demo button

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -21,14 +21,13 @@
               </button>
             </div>
             <div class="btns">
-              <div class="btn-outline-gradient-button">
+              <div class="btn-outline-gradient-button" (click)="talkToAnExpert()">
                 <a
                   class="hover-on-white"
                   style="text-decoration: none"
-                  href="https://docs.shyft.to"
-                  target="_blank"
+                  
                 >
-                  <div class="inner-white-area text-center">Read Docs</div>
+                  <div class="inner-white-area text-center">Book A Demo</div>
                 </a>
               </div>
             </div>
@@ -60,14 +59,13 @@
         </div>
         <div class="hero-button-container-2 text-center">
           <button class="btn-solid-reg-2 mb-3">Try Shyft for Free</button>
-          <div class="btn-outline-gradient-button">
+          <div class="btn-outline-gradient-button" (click)="talkToAnExpert()">
             <a
               class="hover-on-white"
               style="text-decoration: none"
-              href="https://docs.shyft.to"
-              target="_blank"
+              
             >
-              <div class="inner-white-area">Read Docs</div>
+              <div class="inner-white-area">Book A Demo</div>
             </a>
             <!-- <div class="btns">
               <div class="" (click)="talkToAnExpert()">
