Removed lorem ipsum from get api key page

--- a/src/app/modules/static/components/get-api-page/get-api-page.component.html
+++ b/src/app/modules/static/components/get-api-page/get-api-page.component.html
@@ -7,9 +7,9 @@
           <h2 class="medium-large-headings mt-3">Get Free API Key</h2>
 
           <p class="p-para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum
+            <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum
             netus fames viverra facilisis. Vulputate sed lectus augue senectus
-            et. Et ipsum congue senectus viverra semper lectus nisl.
+            et. Et ipsum congue senectus viverra semper lectus nisl. -->
           </p>
           <form
             id="myForm"
