updated discord links

--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -712,7 +712,7 @@
           <div class="col-sm-12 col-md-6 col-lg-6">
             <div class="pt-3 text-center text-md-start">
               <span class="inline-image"
-                ><a href="https://discord.gg/UP5mpXKN" target="_blank"
+                ><a href="https://discord.gg/8JyZCjRPmr" target="_blank"
                   ><img src="assets/images/Icons/discord.svg" alt="" /><span
                     >Discord</span
                   ></a
@@ -726,7 +726,7 @@
             <div class="text-center text-md-start">
               <a
                 class="btn-solid-reg fixed-width-new text-center"
-                href="https://discord.gg/UP5mpXKN"
+                href="https://discord.gg/8JyZCjRPmr"
                 target="_blank"
                 >Join community</a
               >
